[tool.poetry]
name = "<project_name>"
version = "0.0.0"
description = "<description>"
authors = ["Happydog <happydog0930@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "<project_name>", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.12,<=3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
isort = "^5.13.2"
mypy = "^1.12.0"
black = "^24.10.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
rich = "^13.9.4"
huggingface-hub = "^0.29.3"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
langfuse = "^2.60.1"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 150
quiet = true


[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
check_untyped_defs = true


[tool.flake8]
max-line-length = 150
indent-size = 4
ignore = ["E501", "E704"]


[tool.isort]
profile = "black"
